@@ -1,2 +1,3 @@
 [hosts]
 localhost = hello
+
