@@ -5,7 +5,8 @@ Changelog
 1.5.1 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Add a way to override DNS lookup during configuration, to better support
+ migration scenarios.
 
 
 1.5.0 (2017-06-23)
